force-app/main/default/objects/Lmr_Metric__c/Lmr_Metric__c.object-meta.xml
<CustomObject>
    <description>Metrics</description>
    <label>Metric</label>
    <nameField>
        <displayFormat>Metric-{0000}</displayFormat>
        <label>Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>