force-app/main/default/objects/Lmr_Metric__c/fields/Leads_Processed__c.field-meta.xml
<CustomField>
    <fullName>Leads_Processed__c</fullName>
    <label>Leads Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>