force-app/main/default/objects/Lmr_Metric__c/fields/Opportunities_Not_Processed__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Not_Processed__c</fullName>
    <label>Opportunities Not Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>