force-app/main/default/objects/Lmr_Metric__c/fields/Properties_Processed__c.field-meta.xml
<CustomField>
    <fullName>Properties_Processed__c</fullName>
    <label>Properties Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>